putting tables, plots in separate file from DGP

--- a/code/40_dgp_try47.Rmd
+++ b/code/40_dgp_try47.Rmd
@@ -484,8 +484,7 @@ saveRDS(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".RDS")))
 write.csv(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".csv")), row.names = FALSE)
 
 ```  
-
-
+######  IF CLEAN IN 41_results.Rmd, remove below this line #################
 
 
 ##4 FULL-FACTORIAL ANOVA (RQ answers)
@@ -1369,152 +1368,6 @@ gt_partial <- tbl_partial %>%
 
 gt_partial
 ```  
-
-
-
-
-
-
-
-
-
-#Publication-ready plots
-
-```{r eval=FALSE}
-# ---- 1) Gamma bias by treatment (scenario-level mean bias) ----
-gamma_grid <- all_df_gamma %>%
-  group_by(treatment, n, prop_extreme, magnitude_level) %>%
-  summarise(
-    mean_bias = mean(bias, na.rm = TRUE),
-    mean_se   = mean(se, na.rm = TRUE),
-    coverage  = mean(cover_ind, na.rm = TRUE),
-    .groups = "drop"
-  )
-
-p_gamma_bias <- ggplot(gamma_grid, aes(x = treatment, y = mean_bias)) +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  geom_point() +
-  geom_line(aes(group = 1)) +
-  facet_grid(prop_extreme ~ magnitude_level, labeller = label_both) +
-  labs(
-    title = "Gamma (Part 2) Interaction: Mean Bias by Treatment",
-    subtitle = "Rows = proportion extreme; Cols = magnitude level",
-    x = "Treatment method",
-    y = "Mean bias (est - true)"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1))
-
-print(p_gamma_bias)
-ggsave(here::here(paste0("figures/gamma_bias_by_treatment_", dt, ".png")),
-       p_gamma_bias, width = 10, height = 7, dpi = 300)
-
-# ---- 2) Gamma SE by treatment ----
-p_gamma_se <- ggplot(gamma_grid, aes(x = treatment, y = mean_se)) +
-  geom_point() +
-  geom_line(aes(group = 1)) +
-  facet_grid(prop_extreme ~ magnitude_level, labeller = label_both) +
-  labs(
-    title = "Gamma (Part 2) Interaction: Mean Model SE by Treatment",
-    subtitle = "Rows = proportion extreme; Cols = magnitude level",
-    x = "Treatment method",
-    y = "Mean SE"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1))
-
-print(p_gamma_se)
-ggsave(here::here(paste0("figures/gamma_se_by_treatment_", dt, ".png")),
-       p_gamma_se, width = 10, height = 7, dpi = 300)
-
-# ---- 3) Gamma coverage by treatment ----
-p_gamma_cov <- ggplot(gamma_grid, aes(x = treatment, y = coverage)) +
-  geom_hline(yintercept = 0.95, linetype = "dashed") +
-  geom_point() +
-  geom_line(aes(group = 1)) +
-  facet_grid(prop_extreme ~ magnitude_level, labeller = label_both) +
-  labs(
-    title = "Gamma (Part 2) Interaction: Coverage by Treatment",
-    subtitle = "Dashed line = nominal 0.95; Rows = prop extreme; Cols = magnitude",
-    x = "Treatment method",
-    y = "Coverage"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1))
-
-print(p_gamma_cov)
-ggsave(here::here(paste0("figures/gamma_coverage_by_treatment_", dt, ".png")),
-       p_gamma_cov, width = 10, height = 7, dpi = 300)
-
-# ---- 4) ATT_hat and effect size by treatment ----
-att_grid <- all_df_att %>%
-  group_by(treatment, n, prop_extreme, magnitude_level) %>%
-  summarise(
-    mean_ATT_hat  = mean(est, na.rm = TRUE),
-    mean_ATT_bias = mean(bias, na.rm = TRUE),
-    mean_d        = mean(d_est, na.rm = TRUE),
-    .groups = "drop"
-  )
-
-p_att_hat <- ggplot(att_grid, aes(x = treatment, y = mean_ATT_hat)) +
-  geom_point() +
-  geom_line(aes(group = 1)) +
-  facet_grid(prop_extreme ~ magnitude_level, labeller = label_both) +
-  labs(
-    title = "ATT_hat (RQ4): Mean Estimated ATT by Treatment",
-    subtitle = "Rows = proportion extreme; Cols = magnitude level",
-    x = "Treatment method",
-    y = "Mean ATT_hat"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1))
-
-print(p_att_hat)
-ggsave(here::here(paste0("figures/att_hat_by_treatment_", dt, ".png")),
-       p_att_hat, width = 10, height = 7, dpi = 300)
-
-p_att_bias <- ggplot(att_grid, aes(x = treatment, y = mean_ATT_bias)) +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  geom_point() +
-  geom_line(aes(group = 1)) +
-  facet_grid(prop_extreme ~ magnitude_level, labeller = label_both) +
-  labs(
-    title = "ATT_bias (RQ4): Mean ATT Bias by Treatment",
-    subtitle = "Rows = proportion extreme; Cols = magnitude level",
-    x = "Treatment method",
-    y = "Mean ATT bias (ATT_hat - ATT_true)"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1))
-
-print(p_att_bias)
-ggsave(here::here(paste0("figures/att_bias_by_treatment_", dt, ".png")),
-       p_att_bias, width = 10, height = 7, dpi = 300)
-
-# ---- 6) Effect size (d) by treatment (optional but recommended) ----
-p_att_d <- ggplot(att_grid, aes(x = treatment, y = mean_d)) +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  geom_point() +
-  geom_line(aes(group = 1)) +
-  facet_grid(prop_extreme ~ magnitude_level, labeller = label_both) +
-  labs(
-    title = "ATT Effect Size (d): Mean Standardized ATT by Treatment",
-    subtitle = paste0("Standardized by baseline SD (", ES_REF, "); Rows = prop extreme; Cols = magnitude"),
-    x = "Treatment method",
-    y = "Mean d (ATT / baseline SD)"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1))
-
-print(p_att_d)
-ggsave(here::here(paste0("figures/att_effect_size_d_by_treatment_", dt, ".png")),
-       p_att_d, width = 10, height = 7, dpi = 300)
-
-# Export scenario-level grids for tables
-write.csv(gamma_grid, file = here::here(paste0("results/gamma_grid_", dt, ".csv")), row.names = FALSE)
-write.csv(att_grid,   file = here::here(paste0("results/att_grid_", dt, ".csv")), row.names = FALSE)
-
-```
 
 
 
